--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <body>
 
   <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1> I'm Tasciana.</h1>
     <h2>a web developer.</h2>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
   </div>
 
   <div class="middle-container">
     <div class="profile">
-      <img class="profile-image"src="images\IMG-3732-modified.png" alt="Tasciana's Profile Picture">
+      <img class="profile-image"src="IMG-3732-modified.png" alt="Tasciana's Profile Picture">
       <h2>Hello!</h2>
       <p class="intro">I'm a web devleoper/designer with a passion of the arts and enjoy creating beautiful websites.</p>
     </div>
@@ -31,12 +31,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="web" src="images\web-design-ga385b61f0_640-modified.png" alt="Computer">
+        <img class="web" src="web-design-ga385b61f0_640-modified.png" alt="Computer">
         <h3> Web Design and Development </h3>
         <p>I have extensive training in Javascript, CSS, HTML, Python and continuously learning and adapting to more and more languages!</p>
       </div>
       <div class="skill-row">
-        <img class="tech" src="images\Technical engineer image-modified.png " alt="Technical Engineer">
+        <img class="tech" src="Technical engineer image-modified.png " alt="Technical Engineer">
         <h3>Technical Engineer</h3>
         <p>Assisting Engineers in different technical aspects of construction work such as design, construction, maintenance, surveying, data analysis and preventative maintenance plans.</p>
       </div>
@@ -46,7 +46,7 @@
       <h2>Get In Touch</h2>
       <h3>If you enjoy my web design and interested in your own website!</h3>
       <p class="contact-message">I love art and creating new and beautiful web sites! Let's work together and let your vision come alive!</p>
-      <a class="btn" href="C:\Users\tasci\OneDrive\Desktop\Web Developer Course\CSS - My Site\CSS\Contact Info.html">CONTACT ME</a>
+      <a class="btn" href="Contact Info.html">CONTACT ME</a>
     </div>
   </div>
 
