--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/tasciana-daley-05a584214/">LinkedIn</a>
-    <a class="footer-link" href="https://tdaley98.github.io/CV-1/">Website</a>
+    <a class="footer-link" href="https://tdaley98.github.io/Online-Resume/">Website</a>
     <p class="copyright">© 2022 Tasciana Daley.</p>
   </div>
 
